# chip-in-inventory

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
conf/: config.yaml
data/: sample.json  sample.yaml
examples/rust_client/: Cargo.toml
examples/rust_client/src/: main.rs
scripts/: export_inventory.py  import_inventory.py  test.sh
src/: main.rs  models.rs  repository.rs
webroot/: index.html  script.js  style.css
