[package]
name = "chip-in-inventory"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
etcd-client = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
